<resources>
    <string name="app_name">Recipe Book</string>

    <string name="home" translatable="false">Home</string>
    <string name="hub" translatable="false">Hub</string>
    <string name="recipe_adding" translatable="false">recipe adding</string>
    <string name="cocking_time_image" translatable="false">cocking time image</string>
    <string name="ingredients_count_image" translatable="false">ingredients count image</string>
    <string name="bookmark" translatable="false">bookmark</string>
    <string name="search_image" translatable="false">search image</string>
    <string name="way_out_to_home_fragment" translatable="false">way out to HomeFragment</string>
    <string name="ingredients">Ingredients</string>
    <string name="name">Name</string>
    <string name="cooking_info">Cooking info</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="weight">Weight</string>
    <string name="add_new_ingredient">add new ingredient</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete_ingredient">delete ingredient</string>
    <string name="save_new_ingredient">save new ingredient</string>
    <string name="category">Category</string>
    <string name="count">Count</string>
    <string name="new_ingredient">New Ingredient</string>
    <string name="fill_ingredient_name">Fill all fields</string>
    <string name="delete_selected_recipe" translatable="false">delete selected recipe</string>
    <string name="close_delete_window" translatable="false">close deleted window</string>
    <string name="delete">Delete</string>
    <string name="count_item_selected"> item selected</string>
    <string name="search">Search</string>
    <string name="default_recipe_info_image" translatable="false">default recipe info image</string>
    <string name="data_transfer_error" translatable="false">Data transfer error</string>
    <string name="recipe_cooking_info" translatable="false">Recipe cooking info</string>
    <string name="close_adding_fragment" translatable="false">Close adding fragment</string>
    <string name="time_display">Cooking time:</string>
    <string name="category_display">Category:</string>
    <string name="no_info_display">No information</string>
    <string name="time_did_not_in">No time</string>
    <string name="edit_time" translatable="false">edit time</string>
    <string name="close_time_picker_fragment" translatable="false">close_time_picker_fragment</string>
    <string name="cooking_time">Cooking time</string>
    <string name="save_time" translatable="false">save time</string>
    <string name="add">Add</string>
    <string name="error">Error</string>
    <string name="custom_time" translatable="false">Custom time</string>
    <string name="enter_time" translatable="false">Enter time</string>

    <string name="time_format" translatable="false">%s hours %s minutes</string>
    <string name="hours_format" translatable="false">%s hours</string>
    <string name="minutes_format" translatable="false">%s minutes</string>

    <string name="hours" translatable="false">hours</string>
    <string name="minutes" translatable="false">minutes</string>
    <string name="hour" translatable="false">Hour</string>
    <string name="minute" translatable="false">Minute</string>

    <string name="incorrect_text" translatable="false">Incorrect text</string>
    <string name="too_long" translatable="false">Text is too long</string>

    <string name="close" translatable="false">Close</string>

    <string name="all" translatable="false">All</string>

    <string name="failed_open_db" translatable="false">Failed open database. Repeat?</string>
    <string name="failed_create_db" translatable="false">Failed create database. Repeat?</string>

    <string-array name="dish_categories">
        <item name="all">All</item>
        <item name="hot_dish">Hot dishes</item>
        <item name="bakery_products">Bakery products</item>
        <item name="salads">Salads</item>
        <item name="cold_dish">Cold dishes</item>
        <item name="beverages">Beverages</item>
        <item name="snacks">Snacks</item>
        <item name="seaming">Seaming</item>
        <item name="others">Other</item>
    </string-array>

</resources>