<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:focusable="false"
    android:focusableInTouchMode="true">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/rwHours"
        app:layout_constraintEnd_toEndOf="@id/rwMinutes"
        app:layout_constraintStart_toStartOf="@id/rwHours"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_time"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_baseline_check_28"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/inputLayout"
        app:layout_constraintEnd_toEndOf="@id/inputLayout"
        app:layout_constraintTop_toTopOf="@id/inputLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rwHours"
        android:layout_width="126dp"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toStartOf="@id/rwMinutes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLayout" />

    <TextView
        android:id="@+id/twHour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/hour"
        android:textColor="@color/grey_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/rwHours"
        app:layout_constraintTop_toBottomOf="@id/rwHours" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rwMinutes"
        android:layout_width="126dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toEndOf="@id/rwHours"
        app:layout_constraintTop_toTopOf="@id/rwHours" />

    <TextView
        android:id="@+id/twMinute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:text="@string/minute"
        android:textColor="@color/grey_text"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/rwMinutes"
        app:layout_constraintTop_toBottomOf="@id/rwMinutes" />

</merge>